# lib_strings

./: CMakeLists.txt  README.md
include/public/: lib_strings.h  libstrings.h
private/: lib_strings.c
src/: libstrings.c
